--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -45,7 +45,7 @@
   <a name="top"></a></li>
 	<li><a href="#summary" accesskey="1" title="AccessKey[1]: Jump to main content">Summary</a></li>
 	<li><a href="#credits" accesskey="2" title="AccessKey[2]: Jump to sidebar menu">Credits</a></li>
-	<li><a href="#photos" accesskey="3" title="AccessKey[3]: Jump to footer items">Photos</a></li>
+	<li><a href="#photos">Photos</a></li>
 	<li><a href="#press" accesskey="4" title="AccessKey[4]: Jump to comments">Press</a></li>
 </ul>
 
@@ -56,7 +56,7 @@
 
 <p></p>
 
-<a name="#summary"></a> <h2>Summary</h2>
+<div id="#summary"> <h2>Summary</h2></div>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <p>A series of racist acts prompts three Mizzou students to pick up cameras and take us inside the student movement that brought down their college president. From the hunger strike, to victory, to the fear of violent reprisals, we live with the students who started a campus revolt.</p>
 
@@ -75,7 +75,7 @@
 <h3>Produced by</h3>
   <p style= "text-align: center">Robert Greene, Stacey Woelfel and the Jonathan B. Murray Center for Documentary Journalism</p>
 
-<a name="#photos"></a> <h2>Photos</h2>
+<div id="photos"> <h2>Photos</h2></div>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <div class="photos">
   <div class="mySlides fade">
