--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -49,10 +49,10 @@
 	<li><a href="#press" accesskey="4" title="AccessKey[4]: Jump to comments">Press</a></li>
 </ul>
 
-<div><a name="summary"></a></div>
-<div><a name="credits"></a></div>
-<div><a name="photos"></a></div>
-<div><a name="press"></a></div>
+<div><a name="#summary"></a></div>
+<div><a name="#credits"></a></div>
+<div><a name="#photos"></a></div>
+<div><a name="#press"></a></div>
 
 <p></p>
 
