made minimenu work

--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -43,24 +43,20 @@
 
 <ul id="jump" role="heading">
   <a name="top"></a></li>
-	<li><a href="#summary" accesskey="1" title="AccessKey[1]: Jump to main content">Summary</a></li>
-	<li><a href="#credits" accesskey="2" title="AccessKey[2]: Jump to sidebar menu">Credits</a></li>
+	<li><a href="#summary">Summary</a></li>
+	<li><a href="#credits">Credits</a></li>
 	<li><a href="#photos">Photos</a></li>
-	<li><a href="#press" accesskey="4" title="AccessKey[4]: Jump to comments">Press</a></li>
+	<li><a href="#press">Press</a></li>
 </ul>
 
-<div><a name="#summary"></a></div>
-<div><a name="#credits"></a></div>
-<div><a name="#photos"></a></div>
-<div><a name="#press"></a></div>
 
 <p></p>
 
-<div id="#summary"> <h2>Summary</h2></div>
+<div id="summary"> <h2>Summary</h2></div>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <p>A series of racist acts prompts three Mizzou students to pick up cameras and take us inside the student movement that brought down their college president. From the hunger strike, to victory, to the fear of violent reprisals, we live with the students who started a campus revolt.</p>
 
-<a name="#credits"></a> <h2>Credits</h2>
+<div id="credits"></a> <h2>Credits</h2>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <p>
   <img src= "./images/filmmakers_photo.jpg" width="600px" alt= "Concerned Student filmmakers"/></p>
@@ -139,7 +135,7 @@ function showSlides(n) {
 }
 </script>
 
-<a name="#press"></a> <h2>Press </h2>
+<div id="press"></a> <h2>Press </h2>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <h3 style="text-align: center">Vox Magazine</h3>
   <p style= "text-align: center">
