--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -44,8 +44,8 @@
 <ul id="jump" role="heading">
   <a name="top"></a></li>
 	<li><a href="#summary">Summary</a></li>
+  <li><a href="#photos">Photos</a></li>
 	<li><a href="#credits">Credits</a></li>
-	<li><a href="#photos">Photos</a></li>
 	<li><a href="#press">Press</a></li>
 </ul>
 
@@ -54,22 +54,11 @@
 
 <div id="summary"> <h2>Summary</h2></div>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
-<p>A series of racist acts prompts three Mizzou students to pick up cameras and take us inside the student movement that brought down their college president. From the hunger strike, to victory, to the fear of violent reprisals, we live with the students who started a campus revolt.</p>
-
-<div id="credits"></a> <h2>Credits</h2>
-<p class="toplink">(<a href="#top">Back To Top</a>)</p>
-<p>
-  <img src= "./images/filmmakers_photo.jpg" width="600px" alt= "Concerned Student filmmakers"/></p>
-<h3>Filmmakers</h3>
-  <p style= "text-align: center"> Varun Bajaj, Adam Dietrich and Kellan Hayley Marvin</p>
-<h3>Directors</h3>
-  <p style= "text-align: center">Adam Dietrich and Varun Bajaj</p>
-<h3>Producers</h3>
-  <p style= "text-align: center">Varun Bajaj, Adam Dietrich and Kellan Hayley Marvin</p>
-<h3>Camera</h3>
-  <p style= "text-align: center">Adam Dietrich, Varun Bajaj and Kellan Hayley Marvin</p>
-<h3>Produced by</h3>
-  <p style= "text-align: center">Robert Greene, Stacey Woelfel and the Jonathan B. Murray Center for Documentary Journalism</p>
+<p>A series of racist acts prompts three Mizzou students to pick up cameras and take us inside the student movement that brought down their college president. From the hunger strike, to victory, to the fear of violent reprisals, we live with the students who started a campus revolt.
+  The students began filming on Nov. 2, when Jonathan Butler of Concerned Student 1950 announced he was going on a hunger strike until Tim Wolfe, president of the University of Missouri System, resigned.
+  When the Missouri football team decided to go on strike six days later in solidarity with Concerned Student 1950, Bajaj said Field of Vision co-founder A.J. Schnack, who graduated from the Missouri School of Journalism in 1990, contacted the students' professor, Robert Greene of the Murray Center for Documentary Journalism at MU.
+  The students filmed for 13 days. Schnack said Field of Vision first saw footage a week or two after Wolfe resigned. He said not only did the students present Field of Vision with enough footage for a film, but it was of "high quality and incredible access" and showed events from multiple perspectives.
+</p>
 
 <div id="photos"> <h2>Photos</h2></div>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
@@ -135,6 +124,22 @@ function showSlides(n) {
 }
 </script>
 
+<div id="credits"></a> <h2>Credits</h2>
+<p class="toplink">(<a href="#top">Back To Top</a>)</p>
+<p>
+  <img src= "./images/filmmakers_photo.jpg" width="600px" alt= "Concerned Student filmmakers"/></p>
+<h3>Filmmakers:</h3>
+  <p style= "text-align: center"> Varun Bajaj, Adam Dietrich and Kellan Hayley Marvin</p>
+<h3>Directors:</h3>
+  <p style= "text-align: center">Adam Dietrich and Varun Bajaj</p>
+<h3>Producers:</h3>
+  <p style= "text-align: center">Varun Bajaj, Adam Dietrich and Kellan Hayley Marvin</p>
+<h3>Camera:</h3>
+  <p style= "text-align: center">Adam Dietrich, Varun Bajaj and Kellan Hayley Marvin</p>
+<h3>Produced by:</h3>
+  <p style= "text-align: center">Robert Greene, Stacey Woelfel and the Jonathan B. Murray Center for Documentary Journalism</p>
+
+
 <div id="press"></a> <h2>Press </h2>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <h3 style="text-align: center">Vox Magazine</h3>
@@ -143,6 +148,8 @@ function showSlides(n) {
 <h3 style="text-align: center">Columbia Daily Tribune</h3>
   <p style= "text-align: center">
     Public response to the film's True/False Film Festival screening by the <a style= "color:black" href= "http://www.columbiatribune.com/news/local/true-false-film-documents-experience-of-university-of-missouri-student/article_da17c1d5-70d7-58ce-b0f0-bfc41cd31b46.html" title="Columbia Tribune"> Columbia Tribune</a></p>
+<h3 style="text-align: center">Press Kit <a href="./press_kits/Press_kit_example.pdf">PDF
+
 
 </div> <!--Closing body container-->
 
