press info on page added

--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -148,6 +148,7 @@ function showSlides(n) {
 <h3 style="text-align: center">Columbia Daily Tribune</h3>
   <p style= "text-align: center">
     Public response to the film's True/False Film Festival screening by the <a style= "color:black" href= "http://www.columbiatribune.com/news/local/true-false-film-documents-experience-of-university-of-missouri-student/article_da17c1d5-70d7-58ce-b0f0-bfc41cd31b46.html" title="Columbia Tribune"> Columbia Tribune</a></p>
+<p><h3 style="text-align: center"><a style="color:black" href="press.html">Press Page </a></p> 
 <h3 style="text-align: center">Press Kit <a href="./press_kits/Press_kit_example.pdf">PDF
 
 
