--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -142,14 +142,14 @@ function showSlides(n) {
 
 <div id="press"></a> <h2>Press </h2>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
-<h3 style="text-align: center">Vox Magazine</h3>
+<h3 style="text-align: center">Vox Magazine:</h3>
   <p style= "text-align: center">
-    Public response to the film's True/False Film Festival screening by <a style= "color:black" href= "http://www.voxmagazine.com/arts/movies/social-media-loved-concerned-student-film/article_d501fe4c-e3fe-11e5-8784-a769f84fe851.html" title="Vox Magazine"> Vox Magazine</a></p>
-<h3 style="text-align: center">Columbia Daily Tribune</h3>
+    Public response to the film's True/False Film Festival screening by <a style= "color:black" href= "http://www.voxmagazine.com/arts/movies/social-media-loved-concerned-student-film/article_d501fe4c-e3fe-11e5-8784-a769f84fe851.html" target="_blank" title="Vox Magazine"> Vox Magazine</a></p>
+<h3 style="text-align: center">Columbia Daily Tribune:</h3>
   <p style= "text-align: center">
-    Public response to the film's True/False Film Festival screening by the <a style= "color:black" href= "http://www.columbiatribune.com/news/local/true-false-film-documents-experience-of-university-of-missouri-student/article_da17c1d5-70d7-58ce-b0f0-bfc41cd31b46.html" title="Columbia Tribune"> Columbia Tribune</a></p>
-<p><h3 style="text-align: center"><a style="color:black" href="press.html">Press Page </a></p> 
-<h3 style="text-align: center">Press Kit <a href="./press_kits/Press_kit_example.pdf">PDF
+    Public response to the film's True/False Film Festival screening by the <a style= "color:black" href= "http://www.columbiatribune.com/news/local/true-false-film-documents-experience-of-university-of-missouri-student/article_da17c1d5-70d7-58ce-b0f0-bfc41cd31b46.html" target="_blank" title="Columbia Tribune"> Columbia Tribune</a></p>
+<p><h3 style="text-align: center"><a style="color:black" href="press.html">Press Page </a></p>
+<h3 style="text-align: center">Press Kit <a style="color:black" href="./press_kits/Press_kit_example.pdf" target="_blank">PDF
 
 
 </div> <!--Closing body container-->
