--- a/filmmakers.html
+++ b/filmmakers.html
@@ -40,7 +40,7 @@ Meet the Filmmakers
 </h1>
 
 <p id = "about">
-Method M Films is powered by up and coming filmmakers from the University of Missouri- Columbia. Our filmmakers are part of the <a id="connect" href= "https://docjournalism.com/jonathan-b-murray-center/" title="Johnathan B. Murray Center for Documentary Journalism"> Johnathan B. Murry Center for Documentary Journalism site</a>.
+Method M Films is powered by up and coming filmmakers from the University of Missouri- Columbia. Our filmmakers are part of the <a id="connect" href= "https://docjournalism.com/jonathan-b-murray-center/" target="_blank" title="Johnathan B. Murray Center for Documentary Journalism"> Johnathan B. Murry Center for Documentary Journalism site</a>.
 </p>
 
 <div class="all">
