got the friggin logo to be responsive
whoot whoot!!

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 <h1>
 About Method M Films
 </h1>
-<p style= "text-align: center">
+<p id="aboutlogo" >
 <img src= "./images/method_about_page.png" alt=" Method M Films Logo" width="600px"  />
 </p>
 
