--- a/press.html
+++ b/press.html
@@ -35,14 +35,13 @@
 
 <h1>Press</h1>
 
-<div style="overflow-x:auto;">
+<div style="overflow-x:auto">
 <table style="width:100%" class="TableLinks">
  <tr>
    <th>Name</th>
    <th>Year</th>
    <th>Director</th>
    <th>Language</th>
-   <th>Genre</th>
    <th>Press Kit</td>
  </tr>
  <tr>
@@ -50,7 +49,6 @@
    <td datalabel="2016">2016</td>
    <td datalabel="Adam Dietrich, Varun Bajaj">Adam Dietrich, Varun Bajaj</td>
    <td datalabel="English">English</td>
-   <td datalabel="Short Film / Documentary">Short Film / Documentary</td>
    <td datalabel="PDF"><a href="./press_kits/Press_kit_example.pdf">PDF</td>
 
  </tr>
