--- a/press.html
+++ b/press.html
@@ -63,7 +63,21 @@
   <td datalabel="2008">2008</td>
   <td datalabel="Christopher Nolan">Christopher Nolan</td>
   <td datalabel="English">English</td>
-  <td datalabel="PDF"><a href="./press_kits/Press_kit_example_2.pdf">PDF</td>
+  <td datalabel="PDF"><a href="./press_kits/Press_kit_example_3.pdf">PDF</td>
+</tr>
+<tr>
+  <td datalabel="Fight Club" class="cs1950"><a href="Concerned_Student_1950.html">Fight Club 🎥</a></td>
+  <td datalabel="2008">2008</td>
+  <td datalabel="David Fincher">David Fincher</td>
+  <td datalabel="English">English</td>
+  <td datalabel="PDF"><a href="./press_kits/Press_kit_example_4.pdf">PDF</td>
+</tr>
+<tr>
+  <td datalabel="Jaws" class="cs1950"><a href="Concerned_Student_1950.html">Jaws 🎥</a></td>
+  <td datalabel="1975">1975</td>
+  <td datalabel="Steven Spielberg">Steven Spielberg</td>
+  <td datalabel="English">English</td>
+  <td datalabel="PDF"><a href="./press_kits/Press_kit_example_5.pdf">PDF</td>
 </tr>
 </table>
 </div><!--Closing table container-->
