--- a/films.html
+++ b/films.html
@@ -31,29 +31,88 @@
        <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" height="43px" class="logo-small"/></a></li>
 </ul>
 </nav>
-<div id="bodycontainer">
-  <!--COPY FROM HERE UP TO GET TEMPLATE NAV-->
-<p class="crisis"> hello</p>
-  <div class="dropdown">
-    <button class="dropbtn">Filter By</button>
-    <div class="dropdown-content">
-      <a href="films_a_to_z.html">A to Z</a>
-      <a href="films.html">Current</a>
-      <a href="films_director.html">Director</a>
+
+<div id="filmcopyright">
+  <p>All rights reserved to the individual filmmakers associated with Method M Films and the University of Missouri. No part of these publications may be reproduced or used in any matter witout express written permission.</p>
+</div>
+
+<h1>Recent Films</h1>
+
+<div align="center" id="carousel">
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/Concerned_Student_poster.JPG" /></a>
+      </div>
+      <div class="slide">
+          <a href="Concerned_Student_1950.html"><img src="images/posters/force-awakens.jpeg" /></a>
+      </div>
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/dark-knight.jpg" /></a>
     </div>
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/fight-club.jpg" /></a>
+    </div>
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/titanic.jpg" /></a>
+    </div>
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/silence-of-the-lambs.jpg" /></a>
+    </div>
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/jaws.jpg" /></a>
+    </div>
+</div>
+
+<h1>A to Z</h1>
+
+<div align="center" id="carousel">
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/Concerned_Student_poster.JPG" /></a>
+      </div>
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/dark-knight.jpg" /></a>
+    </div>
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/fight-club.jpg" /></a>
+    </div>
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/force-awakens.jpeg" /></a>
+    </div>
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/jaws.jpg" /></a>
+    </div>
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/silence-of-the-lambs.jpg" /></a>
+    </div>
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/titanic.jpg" /></a>
+    </div>
+</div>
+
+<h1>By Director</h1>
+
+<div align="center" id="carousel">
+  <div class="slide">
+      <a href="Concerned_Student_1950.html"><img src="images/posters/force-awakens.jpeg" /></a>
   </div>
-
-  <h1>Current</h1>
-
-<ul id="navposters" class="align-center" >
-  <li><a href="Concerned_Student_1950.html"><img src="./images/Concerned_Student_poster.JPG" alt="Concerned Student 1950" width="100%"/></a></li>
-  <li><a href="Concerned_Student_1950.html"><img src="./images/posters/dark-knight.jpg" alt="Dark Knight" width="100%"/></a></li>
-  <li><a href="Concerned_Student_1950.html"><img src="./images/posters/fight-club.jpg" alt="Fight Club" width="100%"/></a></li>
-  <li><a href="Concerned_Student_1950.html"><img src="./images/posters/force-awakens.jpeg" alt="Force Awakens" width="100%"/></a></li>
-  <li><a href="Concerned_Student_1950.html"><img src="./images/posters/jaws.jpg" alt="Jaws" width="100%"/></a></li>
-  <li><a href="Concerned_Student_1950.html"><img src="./images/posters/silence-of-the-lambs.jpg" alt="Silence of the Lambs" width="100%"/></a></li>
-  <li><a href="Concerned_Student_1950.html"><img src="./images/posters/titanic.jpg" alt="Titanic" width="100%"/></a></li>
-</ul>
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/Concerned_Student_poster.JPG" /></a>
+      </div>
+      <div class="slide">
+          <a href="Concerned_Student_1950.html"><img src="images/posters/titanic.jpg" /></a>
+      </div>
+      <div class="slide">
+          <a href="Concerned_Student_1950.html"><img src="images/posters/silence-of-the-lambs.jpg" /></a>
+      </div>
+      <div class="slide">
+          <a href="Concerned_Student_1950.html"><img src="images/posters/fight-club.jpg" /></a>
+      </div>
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/dark-knight.jpg" /></a>
+    </div>
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/jaws.jpg" /></a>
+    </div>
+</div>
 
 </div> <!--Closing body container-->
 <ul id="footer">
