--- a/films.html
+++ b/films.html
@@ -39,53 +39,147 @@
 <h1>Recent Films</h1>
 
 <div align="center" id="carousel">
+  <div class="slide">
+      <a href="Concerned_Student_1950.html"><img src="images/posters/moana.jpg" /></a>
+    </div>
+
     <div class="slide">
         <a href="Concerned_Student_1950.html"><img src="images/Concerned_Student_poster.JPG" /></a>
       </div>
+
       <div class="slide">
           <a href="Concerned_Student_1950.html"><img src="images/posters/force-awakens.jpeg" /></a>
       </div>
+
+      <div class="slide">
+          <a href="Concerned_Student_1950.html"><img src="images/posters/american-hustle.jpeg" /></a>
+      </div>
+
+      <div class="slide">
+          <a href="Concerned_Student_1950.html"><img src="images/posters/her.jpg" /></a>
+      </div>
+
+      <div class="slide">
+          <a href="Concerned_Student_1950.html"><img src="images/posters/django-unchained.jpg" /></a>
+      </div>
+
     <div class="slide">
         <a href="Concerned_Student_1950.html"><img src="images/posters/dark-knight.jpg" /></a>
     </div>
+
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/kill-bill-vol-1.jpg" /></a>
+    </div>
+
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/spirited-away.jpeg" /></a>
+    </div>
+
     <div class="slide">
         <a href="Concerned_Student_1950.html"><img src="images/posters/fight-club.jpg" /></a>
     </div>
+
     <div class="slide">
         <a href="Concerned_Student_1950.html"><img src="images/posters/titanic.jpg" /></a>
     </div>
+
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/scream.jpg" /></a>
+    </div>
+
     <div class="slide">
         <a href="Concerned_Student_1950.html"><img src="images/posters/silence-of-the-lambs.jpg" /></a>
     </div>
+
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/little-mermaid.jpg" /></a>
+    </div>
+
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/halloween.jpg" /></a>
+    </div>
+
     <div class="slide">
         <a href="Concerned_Student_1950.html"><img src="images/posters/jaws.jpg" /></a>
     </div>
+
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/dr-strangelove.jpg" /></a>
+    </div>
+
 </div>
 
 <h1>A to Z</h1>
 
 <div align="center" id="carousel">
+  <div class="slide">
+    <a href="Concerned_Student_1950.html"><img src="images/posters/american-hustle.jpeg" /></a>
+</div>
+
     <div class="slide">
         <a href="Concerned_Student_1950.html"><img src="images/Concerned_Student_poster.JPG" /></a>
       </div>
+
     <div class="slide">
         <a href="Concerned_Student_1950.html"><img src="images/posters/dark-knight.jpg" /></a>
     </div>
+
+    <div class="slide">
+    <a href="Concerned_Student_1950.html"><img src="images/posters/django-unchained.jpg" /></a>
+</div>
+
+<div class="slide">
+    <a href="Concerned_Student_1950.html"><img src="images/posters/dr-strangelove.jpg" /></a>
+</div>
+
     <div class="slide">
         <a href="Concerned_Student_1950.html"><img src="images/posters/fight-club.jpg" /></a>
     </div>
+
     <div class="slide">
         <a href="Concerned_Student_1950.html"><img src="images/posters/force-awakens.jpeg" /></a>
     </div>
+
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/halloween.jpg" /></a>
+    </div>
+
+    <div class="slide">
+    <a href="Concerned_Student_1950.html"><img src="images/posters/her.jpg" /></a>
+</div>
+
     <div class="slide">
         <a href="Concerned_Student_1950.html"><img src="images/posters/jaws.jpg" /></a>
     </div>
+
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/kill-bill-vol-1.jpg" /></a>
+    </div>
+
+    <div class="slide">
+    <a href="Concerned_Student_1950.html"><img src="images/posters/little-mermaid.jpg" /></a>
+</div>
+
+<div class="slide">
+    <a href="Concerned_Student_1950.html"><img src="images/posters/moana.jpg" /></a>
+  </div>
+
+  <div class="slide">
+    <a href="Concerned_Student_1950.html"><img src="images/posters/scream.jpg" /></a>
+</div>
+
     <div class="slide">
         <a href="Concerned_Student_1950.html"><img src="images/posters/silence-of-the-lambs.jpg" /></a>
     </div>
+
+    <div class="slide">
+        <a href="Concerned_Student_1950.html"><img src="images/posters/spirited-away.jpeg" /></a>
+    </div>
+
     <div class="slide">
         <a href="Concerned_Student_1950.html"><img src="images/posters/titanic.jpg" /></a>
     </div>
+
 </div>
 
 <h1>By Director</h1>
@@ -94,24 +188,71 @@
   <div class="slide">
       <a href="Concerned_Student_1950.html"><img src="images/posters/force-awakens.jpeg" /></a>
   </div>
+
     <div class="slide">
         <a href="Concerned_Student_1950.html"><img src="images/Concerned_Student_poster.JPG" /></a>
       </div>
+
       <div class="slide">
           <a href="Concerned_Student_1950.html"><img src="images/posters/titanic.jpg" /></a>
       </div>
+
+      <div class="slide">
+    <a href="Concerned_Student_1950.html"><img src="images/posters/halloween.jpg" /></a>
+</div>
+
+<div class="slide">
+<a href="Concerned_Student_1950.html"><img src="images/posters/little-mermaid.jpg" /></a>
+</div>
+
+<div class="slide">
+    <a href="Concerned_Student_1950.html"><img src="images/posters/moana.jpg" /></a>
+  </div>
+
+  <div class="slide">
+  <a href="Concerned_Student_1950.html"><img src="images/posters/scream.jpg" /></a>
+</div>
+
       <div class="slide">
           <a href="Concerned_Student_1950.html"><img src="images/posters/silence-of-the-lambs.jpg" /></a>
       </div>
+
       <div class="slide">
           <a href="Concerned_Student_1950.html"><img src="images/posters/fight-club.jpg" /></a>
       </div>
+
+      <div class="slide">
+<a href="Concerned_Student_1950.html"><img src="images/posters/her.jpg" /></a>
+</div>
+
+<div class="slide">
+    <a href="Concerned_Student_1950.html"><img src="images/posters/dr-strangelove.jpg" /></a>
+</div>
+
+<div class="slide">
+    <a href="Concerned_Student_1950.html"><img src="images/posters/spirited-away.jpeg" /></a>
+</div>
+
     <div class="slide">
         <a href="Concerned_Student_1950.html"><img src="images/posters/dark-knight.jpg" /></a>
     </div>
+
+    <div class="slide">
+  <a href="Concerned_Student_1950.html"><img src="images/posters/american-hustle.jpeg" /></a>
+</div>
+
     <div class="slide">
         <a href="Concerned_Student_1950.html"><img src="images/posters/jaws.jpg" /></a>
     </div>
+
+    <div class="slide">
+<a href="Concerned_Student_1950.html"><img src="images/posters/django-unchained.jpg" /></a>
+</div>
+
+<div class="slide">
+    <a href="Concerned_Student_1950.html"><img src="images/posters/kill-bill-vol-1.jpg" /></a>
+</div>
+
 </div>
 
 </div> <!--Closing body container-->
