--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -54,10 +54,10 @@
 
 <div id="summary"> <h2>Summary</h2></div>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
-<p>A series of racist acts prompts three Mizzou students to pick up cameras and take us inside the student movement that brought down their college president. From the hunger strike, to victory, to the fear of violent reprisals, we live with the students who started a campus revolt.
-    The students began filming on Nov. 2, when Jonathan Butler of Concerned Student 1950 announced he was going on a hunger strike until Tim Wolfe, president of the University of Missouri System, resigned.
-  When the Missouri football team decided to go on strike six days later in solidarity with Concerned Student 1950, Bajaj said Field of Vision co-founder A.J. Schnack, who graduated from the Missouri School of Journalism in 1990, contacted the students' professor, Robert Greene of the Murray Center for Documentary Journalism at MU.
-  The students filmed for 13 days. Schnack said Field of Vision first saw footage a week or two after Wolfe resigned. He said not only did the students present Field of Vision with enough footage for a film, but it was of "high quality and incredible access" and showed events from multiple perspectives.
+<p>A series of racist acts prompts three Mizzou students to pick up cameras and take us inside the student movement that brought down their college president. From the hunger strike, to victory, to the fear of violent reprisals, we live with the students who started a campus revolt.</p>
+  <p>The students began filming on Nov. 2, when Jonathan Butler of Concerned Student 1950 announced he was going on a hunger strike until Tim Wolfe, president of the University of Missouri System, resigned.</p>
+  <p>When the Missouri football team decided to go on strike six days later in solidarity with Concerned Student 1950, Bajaj said Field of Vision co-founder A.J. Schnack, who graduated from the Missouri School of Journalism in 1990, contacted the students' professor, Robert Greene of the Murray Center for Documentary Journalism at MU.
+  The students filmed for 13 days. Schnack said Field of Vision first saw footage a week or two after Wolfe resigned. He said not only did the students present Field of Vision with enough footage for a film, but it was of "high quality and incredible access" and showed events from multiple perspectives.</p>
 </p>
 
 <div id="photos"> <h2>Photos</h2></div>
