--- a/filmmakers.html
+++ b/filmmakers.html
@@ -49,11 +49,11 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
       <a href="John_Doe_Director.html" title="Varun Bajaj"> Varun Bajaj </a>
       </h3>
     <p >
-      <img src= "./images/Bajaj.png" alt= "Varun Bajaj" width="150px" />
+      <a href="Concerned_Student_1950.html"><img src= "./images/Bajaj.png" alt= "Varun Bajaj" width="150px" />
 
     </p>
       <p id= "words">
-        <a href="concerned_student_1950.html" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
+        <a href="Concerned_Student_1950.html" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
       </p>
 </div>
 <div class="bio">
