--- a/filmmakers.html
+++ b/filmmakers.html
@@ -63,11 +63,11 @@ Adam Dietrich
 </h3>
 
 <p id= "name">
-<img src= "./images/Dietrich.png" alt= "Adam Dietrich" width="150px" />
+<a href="Concerned_Student_1950.html"><img src= "./images/Dietrich.png" alt= "Adam Dietrich" width="150px" />
 
 </p>
 <p id= "words">
-  <a href="concerned_student_1950.html" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
+  <a href="concerned_student_1950.html"><title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
 </p>
 </div>
 
@@ -76,11 +76,11 @@ Adam Dietrich
       Kellan Marvin
       </h3>
       <p >
-          <img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" />
+    <a href="Concerned_Student_1950.html"><img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" />
 
     </p>
         <p id= "words">
-          <a href="concerned_student_1950.html" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
+          <a href="concerned_student_1950.html"><title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
         </p>
 </div>
 </div>
