--- a/filmmakers.html
+++ b/filmmakers.html
@@ -67,7 +67,7 @@ Adam Dietrich
 
 </p>
 <p id= "words">
-  <a href="concerned_student_1950.html"><title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
+  <a href="Concerned_Student_1950.html"><title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
 </p>
 </div>
 
@@ -80,7 +80,7 @@ Adam Dietrich
 
     </p>
         <p id= "words">
-          <a href="concerned_student_1950.html"><title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
+          <a href="Concerned_Student_1950.html"><title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
         </p>
 </div>
 </div>
