--- a/press.html
+++ b/press.html
@@ -47,31 +47,32 @@
    <td datalabel="Concerned Student 1950" class="cs1950"><a href="Concerned_Student_1950.html">Concerned Student 1950 🎥</a></td>
    <td datalabel="2016">2016</td>
    <td datalabel="Adam Dietrich, Varun Bajaj">Adam Dietrich, Varun Bajaj</td>
-   <td datalabel="PDF"><a href="./press_kits/Press_kit_example.pdf">PDF</td>
+   <td datalabel="PDF"><a href="./press_kits/Press_kit_example.pdf" target="_blank">PDF</td>
  </tr>
+
  <tr>
    <td datalabel="Silance of the Lambs" class="cs1950"><a href="Concerned_Student_1950.html">Silence of the Lambs 🎥</a></td>
    <td datalabel="1991">1991</td>
    <td datalabel="Jonathan Demme">Jonathan Demme</td>
-   <td datalabel="PDF"><a href="./press_kits/Press_kit_example_2.pdf">PDF</td>
+   <td datalabel="PDF"><a href="./press_kits/Press_kit_example_2.pdf" target="_blank">PDF</td>
 </tr>
 <tr>
   <td datalabel="The Dark Knight" class="cs1950"><a href="Concerned_Student_1950.html">The Dark Knight 🎥</a></td>
   <td datalabel="2008">2008</td>
   <td datalabel="Christopher Nolan">Christopher Nolan</td>
-  <td datalabel="PDF"><a href="./press_kits/Press_kit_example_3.pdf">PDF</td>
+  <td datalabel="PDF"><a href="./press_kits/Press_kit_example_3.pdf" target="_blank">PDF</td>
 </tr>
 <tr>
   <td datalabel="Fight Club" class="cs1950"><a href="Concerned_Student_1950.html">Fight Club 🎥</a></td>
   <td datalabel="2008">2008</td>
   <td datalabel="David Fincher">David Fincher</td>
-  <td datalabel="PDF"><a href="./press_kits/Press_kit_example_4.pdf">PDF</td>
+  <td datalabel="PDF"><a href="./press_kits/Press_kit_example_4.pdf" target="_blank">PDF</td>
 </tr>
 <tr>
   <td datalabel="Jaws" class="cs1950"><a href="Concerned_Student_1950.html">Jaws 🎥</a></td>
   <td datalabel="1975">1975</td>
   <td datalabel="Steven Spielberg">Steven Spielberg</td>
-  <td datalabel="PDF"><a href="./press_kits/Press_kit_example_5.pdf">PDF</td>
+  <td datalabel="PDF"><a href="./press_kits/Press_kit_example_5.pdf" target="_blank">PDF</td>
 </tr>
 </table>
 </div><!--Closing table container-->
