Mail and Filmmaker
Contact is now a mail icon
Individual filmmaker bio pick is now responsive

--- a/John_Doe_Director.html
+++ b/John_Doe_Director.html
@@ -43,7 +43,7 @@ Method M Filmmakers
 
 <div id="doe">
 <p class= "doepic">
-  <img src= "./images/johndoe.JPG" alt= "Varun Bajaj" width="1000px" height="566px" />
+  <img src= "./images/johndoe.JPG" alt= "Varun Bajaj" width="100%" />
 </p>
 
 
