Updated filmmakers page

--- a/filmmakers.html
+++ b/filmmakers.html
@@ -44,45 +44,66 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
 </p>
 
 <div class="all">
-  <div class="bio">
-      <h3 >
-      <a href="John_Doe_Director.html" title="Varun Bajaj"> Varun Bajaj </a>
-      </h3>
-    <p >
-      <a href="Concerned_Student_1950.html"><img src= "./images/Bajaj.png" alt= "Varun Bajaj" width="150px" />
 
-    </p>
-      <p id= "words">
-        <a href="Concerned_Student_1950.html"> <title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
-      </p>
-</div>
-<div class="bio">
+<div id="directors">
 
-<h3 >
-Adam Dietrich
-</h3>
-
-<p id= "name">
-<a href="Concerned_Student_1950.html"><img src= "./images/Dietrich.png" alt= "Adam Dietrich" width="150px" />
-
-</p>
-<p id= "words">
-  <a href="Concerned_Student_1950.html"><title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
-</p>
-</div>
-
-<div class="bio">
-    <h3 >
-      Kellan Marvin
-      </h3>
+  <div class="slide">
+    <div>
+        <h3 >
+        <a href="John_Doe_Director.html" title="Varun Bajaj"> Varun Bajaj </a>
+        </h3>
       <p >
-    <a href="Concerned_Student_1950.html"><img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" />
+        <a href="Concerned_Student_1950.html"><img src= "./images/Bajaj.png" alt= "Varun Bajaj" width="150px"  height="310px" />
+
+      </p>
+        <p>
+          <a href="Concerned_Student_1950.html"> <title="Concerned Student 1950"> Co-director of
+            <br />Concerned Student 1950 </a>
+        </p>
+  </div>
+  </div>
+
+  <div class="slide">
+    <div>
+
+    <h3 >
+      <a href="John_Doe_Director.html">Adam Dietrich</a>
+    </h3>
+
+    <p id= "name">
+    <a href="John_Doe_Director.html"><img src= "./images/Dietrich.png" alt= "Adam Dietrich" width="150px"  height="310px" />
 
     </p>
-        <p id= "words">
-          <a href="Concerned_Student_1950.html"><title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a>
-        </p>
+    <p id= "">
+      <a href="Concerned_Student_1950.html"><title="Concerned Student 1950"> Co-director of
+        <br />Concerned Student 1950 </a>
+    </p>
+    </div>
+  </div>
+
+
+
+    <div class="slide">
+      <div>
+          <h3 >
+            <a href="John_Doe_Director.html">Kellan Marvin</a>
+            </h3>
+            <p >
+          <a href="John_Doe_Director.html"><img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" height="310px" />
+
+          </p>
+              <p id= "">
+                <a href="Concerned_Student_1950.html"><title="Concerned Student 1950"> Co-director of<br />
+                  Concerned Student 1950 </a>
+              </p>
+      </div>
+      </div>
 </div>
+
+
+
+
+
 </div>
         <!--COPY FROM HERE DOWN TO GET TEMPLATE FOOTER-->
 </div>
