--- a/filmmakers.html
+++ b/filmmakers.html
@@ -45,7 +45,7 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
 
 <div class="all">
 
-<div id="directors">
+<div class="directors">
 
   <div class="slide">
     <div>
