--- a/index.html
+++ b/index.html
@@ -37,27 +37,27 @@
 
   <div class="slideshow-container">
     <div class="mySlides fade">
-      <a href="Concerned_Student_1950.html"><img class="slideimage" src="images/CS_still.jpg" style="width:100%">
+      <a href="Concerned_Student_1950.html"><img class="slideimage" src="images/CS_still.jpg" style="width:100%"></a>
       <div class="text">Concerned Student 1950</div>
     </div>
 
     <div class="mySlides fade">
-      <a href="Concerned_Student_1950.html"><img class="slideimage" src="images/dummy_still1.jpg" style="width:100%">
+      <a href="Concerned_Student_1950.html"><img class="slideimage" src="images/dummy_still1.jpg" style="width:100%"></a>
       <div class="text">Silence of the Lambs</div>
     </div>
 
     <div class="mySlides fade">
-      <a href="Concerned_Student_1950.html"><img src="images/dummy_still2.jpg" style="width:100%">
+      <a href="Concerned_Student_1950.html"><img src="images/dummy_still2.jpg" style="width:100%"></a>
       <div class="text">The Dark Knight</div>
     </div>
 
     <div class="mySlides fade">
-      <a href="Concerned_Student_1950.html"><img src="images/dummy_still3.jpg" style="width:100%">
+      <a href="Concerned_Student_1950.html"><img src="images/dummy_still3.jpg" style="width:100%"></a>
       <div class="text">Fight Club</div>
     </div>
 
     <div class="mySlides fade">
-      <a href="Concerned_Student_1950.html"><img src="images/dummy_still4.jpg" style="width:100%">
+      <a href="Concerned_Student_1950.html"><img src="images/dummy_still4.jpg" style="width:100%"></a>
       <div class="text">Jaws</div>
     </div>
     <a class="prev" onclick="plusSlides(-1)"><h1 class="arrow">&#10094;</h1></a>
