--- a/about.html
+++ b/about.html
@@ -35,9 +35,6 @@
 <h1>
 About Method M Films
 </h1>
-<p id="aboutlogo" >
-<img src= "./images/method_about_page.png" alt=" Method M Films Logo" width="600px"  />
-</p>
 
 <p id ="about">
 Method M Films is powered by up and coming filmmakers from the University of Missouri- Columbia. Our filmmakers are part of the <a id="connect" href= "https://docjournalism.com/jonathan-b-murray-center/" target="_blank" title="Johnathan B. Murray Center for Documentary Journalism"> Johnathan B. Murry Center for Documentary Journalism site</a>. They have taken part in the Missouri Method which is both how Method M got its name and how the Journalism school teaches its students. The Missouri Method is a style of learning though real-life journalism exposure. This is where the seniors of the Murry Center showcase their work.
@@ -45,39 +42,18 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
 <h2 >
 Faculty
 </h2>
-<div class="all">
-  <div class="bio2">
-      <h3 id="name">
-      Stacey Woelfel
-      </h3>
+<div class="card-container">
+    <div class="card">
+        <a href="mailto:woelfels@missouri.edu"><img src="./images/stacey.jpg" alt="Stacey Woelfel"/></a>
+        <p>Director of the Jonathan B. Murray Center for Documentary Journalism at the school. He serves on the screening committee of the True/False Film Fest, is a jury member for the St. Louis International Film Festival and serves as a jury member and a member of the board of the Kansas City Film Festival.</p><p><a href="mailto:woelfels@missouri.edu">You can contact him at: woelfels@missouri.edu</a></p>
+    </div>
+    <div class="card">
+        <a href="mailto:greenera@missouri.edu"><img src="./images/robert.jpg" alt="Robert Greene"/></a>
+        <p>Filmmaker-in-chief for the Jonathan B. Murray Center for Documentary Journalism. He was named one of the 10 Filmmakers to Watch in 2014 by The Independent. Robert’s most recent film is the critically-acclaimed Kate plays Christine.</p><p><a href="mailto:greenera@missouri.edu">You can contact him at: greenera@missouri.edu</a></p>
+    </div>
+  </div>
 
-    <p id="name">
-      <img src= "./images/stacey.jpg" alt= "Stacey Woelfel" width="150px" />
 
-       <a href="mailto: woelfels@missouri.edu">
-         woelfels@missouri.edu
-       </a>
-    </p>
-      <p id= "words">
-        Director of the Jonathan B. Murray Center for Documentary Journalism at the school. He serves on the screening committee of the True/False Film Fest, is a jury member for the St. Louis International Film Festival and serves as a jury member and a member of the board of the Kansas City Film Festival.
-      </p>
-</div>
-
-<div class="bio2">
-    <h3 id="name">
-      Robert Greene
-      </h3>
-
-      <p id="name">
-          <img src= "./images/robert.jpg" alt= "Robert Greene" width="150px" />
-        <a href="mailto: greenera@missouri.edu"> greenera@missouri.edu
-        </a>
-    </p>
-        <p id="words">
-          Filmmaker-in-chief for the Jonathan B. Murray Center for Documentary Journalism. He was named one of the 10 Filmmakers to Watch in 2014 by The Independent. Robert’s most recent film is the critically-acclaimed Kate plays Christine.
-        </p>
-</div>
-</div>
         <!--COPY FROM HERE DOWN TO GET TEMPLATE FOOTER-->
         </div> <!--Closing body container-->
   <ul id="footer">
