Updated header sizing

--- a/filmmakers.html
+++ b/filmmakers.html
@@ -58,7 +58,7 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
       </p>
         <p>
           <a href="Concerned_Student_1950.html"> <title="Concerned Student 1950"> Co-director of
-            <br />Concerned Student 1950 </a>
+            <br /> Concerned Student 1950 </a>
         </p>
   </div>
   </div>
@@ -93,8 +93,8 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
 
           </p>
               <p id= "">
-                <a href="Concerned_Student_1950.html"><title="Concerned Student 1950"> Co-director of<br />
-                  Concerned Student 1950 </a>
+                <a href="Concerned_Student_1950.html"><title="Concerned Student 1950"> Co-director of
+                  <br />Concerned Student 1950 </a>
               </p>
       </div>
       </div>
