broken css again

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
        <a class="logo-large" id="nav2" class="first"><a class="logo-large" href="index.html"><img src="./images/method_m_gold.png" alt="Logo" width="100%"/></a>
       <a class="site" href"#">&#9776; MENU</a>
 <ul id="nav1" class="navigation">
-      <li class="logo-small" id="nav2" class="first"><a href="index.html"><img src="./images/small_logo.png" alt="Logo" height="43px" class="logo-small"/></a></li>
+      <li class="logo-small" id="nav2" class="first"><a href="index.html"><img src="./images/method_m_gold.png" alt="Logo" height="43px" class="logo-small"/></a></li>
        <li><a href="index.html" title="Home">Home</a></li>
        <li><a href="films.html" title="Films">Films</a></li>
        <li><a href="filmmakers.html" title="Filmmakers">Filmmakers</a></li>
@@ -32,9 +32,9 @@
 </ul>
 </nav>
 <div id="bodycontainer">
-<h1>
-About Method M Films
-</h1>
+  <!--COPY FROM HERE UP TO GET TEMPLATE NAV-->
+
+<h1>About Method M Films</h1>
 
 <p id ="about">
 Method M Films is powered by up and coming filmmakers from the University of Missouri- Columbia. Our filmmakers are part of the <a id="connect" href= "https://docjournalism.com/jonathan-b-murray-center/" target="_blank" title="Johnathan B. Murray Center for Documentary Journalism"> Johnathan B. Murry Center for Documentary Journalism site</a>. They have taken part in the Missouri Method which is both how Method M got its name and how the Journalism school teaches its students. The Missouri Method is a style of learning though real-life journalism exposure. This is where the seniors of the Murry Center showcase their work.
@@ -54,14 +54,14 @@ Faculty
   </div>
 
 
-        <!--COPY FROM HERE DOWN TO GET TEMPLATE FOOTER-->
-        </div> <!--Closing body container-->
+  <!--COPY FROM HERE DOWN TO GET TEMPLATE FOOTER-->
+  </div> <!--Closing body container-->
   <ul id="footer">
-              <li style="float:left"><a href="mailto:woelfels@missouri.edu" title="Contact">Contact</a></li>
-              <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
-              <li><a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
-              <li><a href="https://twitter.com/" target="_blank"><img src="./images/twitter_icon.png" alt="Twitter" width="35px"/></a></li>
-        </ul>
-        </div> <!--Closing entire container-->
-        </body>
-        </html>
+        <li><a href="mailto:woelfels@missouri.edu"><img src="./images/mail_icon.png" width= "35px"></a></li>
+        <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
+        <li><a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
+        <li><a href="https://twitter.com/" target="_blank"><img src="./images/twitter_icon.png" alt="Twitter" width="35px"/></a></li>
+  </ul>
+  </div> <!--Closing entire container-->
+  </body>
+  </html>
